--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,93 @@ input[type="date"] {
     border-radius: 5px;
     font-family: var(--font-body);
 }
+
+/* Basic styling for the calendar container */
+#calendar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 5px;
+    justify-content: center;
+}
+
+/* Styling for each month block */
+.month {
+    width: auto;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Styling for the month header */
+.month h3 {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.5rem;
+    color: #FF6F61;
+    text-align: center;
+    padding-bottom: 10px;
+    margin: 0px;
+}
+
+/* Grid for the days */
+.days-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr); /* 7 columns for each day of the week */
+    grid-gap: 5px;
+    text-align: center;
+}
+
+/* Styling for individual day cells */
+.days-grid div {
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+/* Highlighting today's date */
+.days-grid div.today {
+    background-color: #FF6F61;
+    color: #fff;
+}
+
+/* Styling for empty cells */
+.days-grid .empty-day {
+    background-color: rgba(0,0,0,0);
+    border: 1px solid rgba(0,0,0,0);
+}
+
+/* Highlight the days in the mom's leave */
+.days-grid .mom-leave {
+    background-color: #FFCCCB;
+    color: #d84e4e;
+}
+
+/* Highlight the days in the dad's leave */
+.days-grid .dad-leave {
+    background-color: #C4E1F3;
+    color: #5a98d1;
+}
+
+/* Highlight the days in the joints's leave */
+.days-grid .joint-leave {
+    background-color: #5a98d1;
+    color: #353535;
+}
+
+/* Highlight the birthdate */
+.days-grid .birthdate {
+    background-color: #000000;
+    color: #353535;
+}
+
+/* Hover effect for day cells */
+.days-grid div:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+} 
+
+
