--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* GENERAL STYLING */
 :root {
     --color-primary: #FFB38E;
     --color-secondary: #FFCF9D;
@@ -22,7 +23,7 @@ body {
 
 #app {
     width: 100%;
-    max-width: 800px;
+    max-width: 1200px;
     padding: 1rem;
     text-align: center;
 }
@@ -65,11 +66,14 @@ input[type="date"] {
     font-family: var(--font-body);
 }
 
-/* Basic styling for the calendar container */
+
+
+
+/* BCALENDAR STYLING */
 #calendar {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     margin-top: 5px;
     justify-content: center;
 }
@@ -77,9 +81,9 @@ input[type="date"] {
 /* Styling for each month block */
 .month {
     width: auto;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 8px;
-    padding: 15px;
+    padding: 10px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -87,8 +91,8 @@ input[type="date"] {
 /* Styling for the month header */
 .month h3 {
     font-family: 'Playfair Display', serif;
-    font-size: 1.5rem;
-    color: #FF6F61;
+    font-size: 1.1rem;
+    color: #DE8F5F;
     text-align: center;
     padding-bottom: 10px;
     margin: 0px;
@@ -104,10 +108,10 @@ input[type="date"] {
 
 /* Styling for individual day cells */
 .days-grid div {
-    padding: 10px;
+    padding: 5px;
     background-color: #f9f9f9;
-    border-radius: 5px;
-    font-size: 1.2rem;
+    border-radius: 2px;
+    font-size: 1rem;
     cursor: pointer;
 }
 
@@ -143,8 +147,8 @@ input[type="date"] {
 
 /* Highlight the birthdate */
 .days-grid .birthdate {
-    background-color: #000000;
-    color: #353535;
+    background-color: #5e6472;
+    color: #ffffff;
 }
 
 /* Hover effect for day cells */
@@ -153,3 +157,57 @@ input[type="date"] {
     cursor: pointer;
 } 
 
+.legend {
+    width: 100%;
+    text-align: center;
+}
+
+
+/* Specific styles for the options section in secondStep */
+.second-step-options-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.second-step-option {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    width: 30%;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.second-step-option:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+}
+
+.second-step-option h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.second-step-option p {
+    font-size: 1rem;
+    margin-bottom: 15px;
+}
+
+.second-step-option button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.second-step-option button:hover {
+    background-color: #0056b3;
+}
