--- a/css/styles.css
+++ b/css/styles.css
@@ -218,8 +218,9 @@ input[type="date"] {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center; /* Center items vertically if needed */
     gap: 5px;
-    max-width: 600px;
+    max-width: 650px;
     margin: 0 auto;
     padding: 5px;
 }
@@ -227,12 +228,17 @@ input[type="date"] {
 .leave-period-line {
     display: flex;
     align-items: center;
+    justify-content: center; /* Center content inside the line */
     gap: 10px;
     padding: 10px;
     border-bottom: 1px solid #ddd;
     border-radius: 10px;
     background-color: var(--color-secondary);
+    width: 100%;
+    max-width: 800px; /* Add this to avoid stretching too wide */
+    box-sizing: border-box; /* Ensures padding doesn't affect width */
 }
+
 
 .leave-period-line select {
     padding: 5px 10px;
@@ -257,4 +263,96 @@ input[type="date"] {
     cursor: pointer;
     font-size: 14px;
     margin-left: 10px;
+}
+
+.add-line-button,
+.validate-button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    /* font-size: 14px; */
+    cursor: pointer;
+    margin-right: 5px;
+    margin-top: 10px;
+}
+
+.add-line-button:hover,
+.validate-button:hover {
+    background-color: #45a049;
+}
+
+
+/* HELP BUTTON */
+/* Help Button */
+.help-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: transparent; 
+    color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+    border-radius: 25px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 1000; /* Ensure it stays on top */
+}
+
+.help-btn:hover {
+    background-color: var(--color-primary); 
+    color: white;
+}
+
+/* Help Box */
+#helpBox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensures it overlays the content */
+    visibility: hidden; /* Initially hidden */
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s ease-in-out;
+}
+
+/* Help Box Content */
+.help-content {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: left;
+}
+
+.help-content h2 {
+    margin-top: 0;
+    font-size: 24px;
+}
+
+.help-content p {
+    font-size: 1rem;
+}
+
+/* Close Button */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+}
+
+/* Show Help Box */
+#helpBox.visible {
+    visibility: visible;
+    opacity: 1;
 }
