--- a/css/main.css
+++ b/css/main.css
@@ -19,3 +19,4 @@
 /* Layout styles - App-wide layout settings */
 @import url('layout/app.css');
 @import url('pages/second-step.css');
+@import url('pages/third-step.css');
