--- a/css/components/calendar.css
+++ b/css/components/calendar.css
@@ -17,7 +17,7 @@
 }
 
 .month h3 {
-    font-family: var(--font-title);
+    font-family: var(--font-body);
     font-size: 1.1rem;
     color: var(--color-dark);
     text-align: center;
@@ -75,4 +75,19 @@
     width: 100%;
     text-align: center;
 }
+
+.weekdays-row {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+    margin-bottom: 5px;
+    font-size: 0.8rem;
+    color: #ababab;
+}
+
+.weekday-initial {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 
